Login dialog Made login logo width a % rather than a fixed px. Fixed column classes so that labels break correctly on smaller viewports.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -503,7 +503,7 @@ dd {
 }
 
 .login-header img {
-    width: 327px;
+    width: 60%;
 }
 
 .form-title {
